# cpp

./: .editorconfig  .gitignore  connections.py  reuse.py  vcpkg.json
fc++/: CMakeLists.txt  Dvcpkg.json  curlApi.cpp  curlApi.h  funtionality.cpp  hello.cpp  http.cpp  httpExample.cpp  httpPerform.cpp  main.cpp  serverConecction.cpp  try  vcpkg.json
fc++/backUp/: httpPerformB.cpp  serverConecction copy.cpp
fc++/config/: CMakeLists.txt  config.cpp
fc++/connection/: CMakeLists.txt  httpExample.cpp  httpPerform.cpp  request_parser.cpp  serverConecction.cpp  serverConnection.cpp  socketPerform.cpp  targets.cpp
fc++/examples/: postExamplo.cpp  web_socked.cpp  web_socked_example.cpp
fc++/include/common/: certificades.hpp
fc++/include/config/: config.hpp
fc++/include/connection/: connection.hpp  httpPerform.hpp  request_parser.hpp  serverConecction.hpp  serverConnection.hpp  socketPerform.hpp  targets.hpp
fc++/include/save_controller/: save_controller.hpp
fc++/include/session/: sessio.hpp  session.hpp
fc++/save_controller/: CMakeLists.txt  save_controller.cpp
fc++/session/: CMakeLists.txt  session.cpp
py/: OPY.py  WSPY.py  cd.py  interact.py
